# aams

./: .gitignore  Cargo.toml  LICENSE.md  README.md  blank.rkt  cek.rkt  cesk-star.rkt  cesk.rkt  ceskt-star.rkt  rustfmt.toml
examples/: apply-prim.scm  basic.scm  callcck.scm  set.scm  vararg.scm
latex/: formalism.tex
src/: aceskt-star.rkt  tiny-0cfa.rkt  tiny-scheme-cek.rkt
src/attempt1_k0cfa/: utils.rkt
src/datalog/: compile.rkt  kcfa.slog
src/genkill/: README.md  tiny-lang.rkt
src/k0cfa/: abstract-type-lattice.rkt  tiny-0cfa.rkt  tiny-cesk.rkt  tiny-scheme-cek.rkt
src/racket/attempt1_k0cfa/: tiny-0cfa.rkt
src/racket/basic_machines/: blank.rkt
src/racket/cfa/: flat-cesk.rkt  mcfa.rkt  tiny-cesk.rkt
src/racket/danvy90/: README.md  example.rkt  simple.rkt
src/racket/dybvig07/: cekm.rkt  examples.rkt  f.rkt  term-compiler.rkt
src/racket/felleisen87/: cek.rkt
src/racket/k0cfa/: k0cfa.rkt  tiny-cesk.rkt
src/rust/: common.rs  main.rs  matching.rs  prims.rs  read.rs
src/rust/eval/: apply.rs  eval.rs  mod.rs
src/rust/evaluate/: apply.rs  eval.rs  matching.rs  mod.rs
src/rust/flat_abstract/: domains.rs  mod.rs  prims.rs
src/rust/flat_abstract/evaluate/: apply.rs  eval.rs  mod.rs
src/rust/flat_concrete/: common.rs  domains.rs  mod.rs  prims.rs
src/rust/flat_concrete/evaluate/: apply.rs  eval.rs  matching.rs  mod.rs
src/rust/k1cfa/: common.rs  mod.rs  prims.rs
src/rust/k1cfa/evaluate/: apply.rs  eval.rs  matching.rs  mod.rs
