[package]
name = "aams"
version = "0.1.0"
authors = ["Davis Silverman <sinistersnare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aam"
path = "src/rust/main.rs"

[dependencies]
combine = "*"
im = "*"
lazy_static = "*"
